updated location of index
in order for git page to work

--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="dist/css/main.css">
     <title>Nicole Yue's Projects</title>
 </head>
 <body>
@@ -46,7 +46,7 @@
           </div>   
          <div class="projects_items">
              <div class="projects_item">
-                 <img src="img/img3-littlefire.jpg" alt="My Project">
+                 <img src="dist/img/img3-littlefire.jpg" alt="My Project">
                  <div class="projects_btns">
                      <a href="#!" class="projects_btn">
                      <i class="fas fa-eye"></i>Preview
@@ -57,7 +57,7 @@
                  </div>
              </div>
              <div class="projects_item">
-                 <img src="img/img4-chakra.jpg" alt="My Project">
+                 <img src="dist/img/img4-chakra.jpg" alt="My Project">
                  <div class="projects_btns">
                      <a href="#!" class="projects_btn">
                      <i class="fas fa-eye"></i>Preview
@@ -68,7 +68,7 @@
                  </div>
              </div>
              <div class="projects_item">
-                 <img src="img/img5-stones.jpg" alt="My Project">
+                 <img src="dist/img/img5-stones.jpg" alt="My Project">
                  <div class="projects_btns">
                      <a href="#!" class="projects_btn">
                      <i class="fas fa-eye"></i>Preview
@@ -79,7 +79,7 @@
                  </div>
              </div>
              <div class="projects_item">
-                 <img src="img/img6-meditation.jpg" alt="My Project">
+                 <img src="dist/img/img6-meditation.jpg" alt="My Project">
                  <div class="projects_btns">
                      <a href="#!" class="projects_btn">
                      <i class="fas fa-eye"></i>Preview
@@ -90,7 +90,7 @@
                  </div>
              </div>
              <div class="projects_item">
-                 <img src="img/img2-rainbow.jpg" alt="My Project">
+                 <img src="dist/img/img2-rainbow.jpg" alt="My Project">
                  <div class="projects_btns">
                      <a href="#!" class="projects_btn">
                      <i class="fas fa-eye"></i>Preview
@@ -101,7 +101,7 @@
                  </div>
              </div>
              <div class="projects_item">
-                 <img src="img/img1-Background.jpg" alt="My Project">
+                 <img src="dist/img/img1-Background.jpg" alt="My Project">
                  <div class="projects_btns">
                      <a href="#!" class="projects_btn">
                      <i class="fas fa-eye"></i>Preview
